# t-linter

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  README.md  lsp_debug.py  pyproject.toml  zensical.toml
.github/workflows/: changelog.yml  docs.yaml  llms-txt.yaml  publish.yml  release-check.yml  release-draft.yml  release-notify.yml  test-build.yml  vscode-publish.yml
crates/t-linter/: Cargo.toml
crates/t-linter-cli/: Cargo.toml
crates/t-linter-cli/src/: discovery.rs  lib.rs  sql_prepare.rs
crates/t-linter-core/: Cargo.toml
crates/t-linter-core/src/: backend.rs  format.rs  formatting.rs  highlighter.rs  lib.rs  lint.rs  parser.rs  project_config.rs  python.rs  shadow.rs  tdom.rs
crates/t-linter-core/src/sql/: catalog.rs  mod.rs  psycopg.rs
crates/t-linter-core/src/sql/manifests/: psycopg.tmap.toml
crates/t-linter-lsp/: Cargo.toml
crates/t-linter-lsp/helpers/: sql_describe.py
crates/t-linter-lsp/src/: lib.rs  lsp_helpers.rs  ruff.rs  sql_catalog.rs  type_checker.rs
crates/t-linter/src/: main.rs
crates/t-linter/tests/: check.rs  docs_examples.rs  format.rs  lsp_ruff_pipeline_e2e.rs  main_cli.rs  type_check_lsp.rs
docs/: index.md  installation.md  llms-full.txt  llms.txt  roadmap.md  supported-languages.md
docs/usage/: configuration.md  interpolation-type-checking.md  sql-catalog-cache.md  vscode.md
docs/usage/cli/: check.md  format.md  lsp.md  stats.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  build.js  package-lock.json  package.json
editors/vscode/scripts/: prepare-binary.js
editors/vscode/src/: extension.ts
overrides/: main.html
python/t_linter/: __init__.py
scripts/: build_llms_txt.py  compose_release_notes.py  psycopg_conformance.py  set_release_versions.py  sql_catalog_integration.py  update_docs_version.py  validate_release_notes.py
tests/psycopg_conformance/cases/: composable_spec_mismatch.py  conversion_unsupported.py  dict_needs_json_wrapper.py  format_spec_unknown.py  ok_plain_parameter.py
