[workspace]
members = [
    "crates/t-linter",
    "crates/t-linter-core",
    "crates/t-linter-lsp",
    "crates/t-linter-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Koudai Aono <koxudaxi@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/koxudaxi/t-linter"

[workspace.dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tree-sitter = "0.26.6"
tree-sitter-python = "0.25.0"
tree-sitter-highlight = "0.26.6"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-sequel = "0.3.11"
tokio = { version = "1.50.0", features = ["full"] }
tower-lsp = "0.20"
clap = { version = "4.6.0", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version =  "0.3.23", features = ["env-filter", "fmt"] }
