[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "t-linter"
version = "0.1.0"
description = "Intelligent syntax highlighting and validation for Python template strings (PEP 750)"
authors = [
    { name = "Koudai Aono", email = "koxudaxi@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
keywords = ["linter", "template-strings", "pep750", "syntax-highlighting", "python"]

[project.urls]
Homepage = "https://github.com/koxudaxi/t-linter"
Repository = "https://github.com/koxudaxi/t-linter"
Issues = "https://github.com/koxudaxi/t-linter/issues"

[project.scripts]
t-linter = "t_linter:main"

[tool.maturin]
bindings = "bin"
manifest-path = "crates/t-linter/Cargo.toml"
module-name = "t_linter"