[package]
name = "t-linter-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
t-linter-core = { path = "../t-linter-core" }
