[package]
name = "t-linter-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-highlight = "0.26.6"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-yaml = "0.7.2"
tree-sitter-toml-ng = "0.7.0"
tracing.workspace = true
regex = "1.12.3"
wait-timeout.workspace = true
unicode_names2.workspace = true
tstring-json.workspace = true
tstring-toml.workspace = true
tstring-yaml.workspace = true
tstring-syntax.workspace = true
tstring-html.workspace = true
tstring-thtml.workspace = true
tstring-tdom.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["sql"]
sql = ["tree-sitter-sequel"]

[dependencies.tree-sitter-sequel]
version = "0.3.11"
optional = true
